# yours

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  script.sql
api/: db.py  main.py  migrate_db.py  settings.py
api/cruds/: auth.py  daily.py  word.py
api/models/: model.py
api/routers/: auth.py  daily.py  word.py
api/schemas/: auth.py  daily.py  memo.py  word.py
api/utils/: make_data.py
frontend/: .eslintrc.js  package-lock.json  package.json  tsconfig.json
frontend/src/: main.ts
frontend/src/api/: auth.ts  daily.ts  index.ts  word.ts
frontend/src/components/: BarChart.vue  Navbar.vue  Sidebar.vue  UserDropdown.vue
frontend/src/components/layouts/: Header.vue  SideBarNavGroup.vue  Sidebar.vue
frontend/src/hooks/: ProductService.js  hookGetWords.ts  products.json  useWords.ts
frontend/src/interfaces/: api.ts  state.ts
frontend/src/layouts/: DefaultLayout.vue
frontend/src/pages/: Dashboard.vue  Home.vue
frontend/src/pages/beforelogin/: landing.vue  login.vue  register.vue
frontend/src/pages/daily/: DailyList.vue
frontend/src/pages/word/: NewWordList.vue  WordList.vue  WordListToRemember.vue  WordsListRemembered.vue
frontend/src/router/: index.ts
frontend/src/store/: index.ts
frontend/src/store/modules/: auth.ts  daily.ts  word.ts
frontend/src/utils/: index.ts
